styles/TNRHumane.css
/******HERO******/
.hero-background {
  background: linear-gradient(rgba(51, 51, 51, 0.7),rgba(51, 51, 51, 0.6)),
  url(../imagesUpdated/TNRProject/strays.jpg);
  background-repeat: no-repeat;           /******MOBILE******/
  background-size: cover;
}

.abbreviation {
  color: yellow;
}

.solscr, .solscr2, .probsol2 {
  margin: 2.2rem auto;
  width: 80%;
}

.data {
  background-color: white;
  border: dashed 3px #D9DFFE;        /******MOBILE******/
  border-radius: 1em;
}

.quote {
  color: orange;
}

.extend {
  background-image: url('../imagesUpdated/TNRProject/TNRworkflow.png');
  background-repeat: no-repeat;
  background-size: cover;
}

.digitalSketches {
  background: url('../imagesUpdated/TNRProject/digitalWireframes.jpg');
  background-size: cover;
}

.hifi1 {
  background: url('../imagesUpdated/TNRProject/hifi.jpg') no-repeat;
  background-size: cover;
}

.mindMapping {
  background: url('../imagesUpdated/TNRProject/sketches.png') no-repeat;
  background-size: cover;
  padding: 17.3rem 0;     /******MOBILE*****/
}

.mockupSketches {         /******MOBILE*****/
  background-image: url('../imagesUpdated/TNRProject/brainstormDesign.jpg');
}

.slides-bg h4 {
  background-color: #333333;
  color: white;
}

.mySlides {
  background-color: #333333;
  color: white;
  height: 50%;
}

.v2Tab img, .v3Tab img {
  display: none;
}

.final-title, .finish, .added {
  display: none;
}

@media screen and (min-width: 768px) {
  .solscr, .solscr2 {
    width: 70%;
  }

  .digitalSketches {
    background: url('../imagesUpdated/TNRProject/wireframeTab.png');
    background-size: cover;
  }

  .mindMapping {
    padding: 30rem 0;
  }

  .mySlides h6 {
    font-size: 3rem;
    padding-bottom: 2.2rem;
  }

  .v2, .v3 {
    display: none;
  }

  .v2Tab, .v3Tab{
    display: grid;
    grid-gap: 0;
    grid-template-columns: 1fr 1fr;
    padding: 0;
  }

  .v2Tab img, .v3Tab img {
    display: grid;
    width: 100%;
  }

}

@media screen and (min-width: 900px) {
  .digitalSketches {
    background: url('../imagesUpdated/TNRProject/wireframeDesk.jpg');
    background-size: cover;
  }

  .hifi1 {
    background: url('../imagesUpdated/TNRProject/hifiDesk.jpg') no-repeat;
    background-size: cover;
  }
}

